<package>
  <name>rosemacs</name>
  <version>0.4.11</version>
  <description>ROS tools for those who live in Emacs.</description>

  <author>Bhaskara Marthi</author>
  <maintainer email="kazhoyan@cs.uni-bremen.de">Gayane Kazhoyan</maintainer>
  <license>BSD</license>
  <url type="website">http://www.ros.org/wiki/rosemacs</url>
  <url type="repository">https://github.com/code-iai/ros_emacs_utils</url>

  <buildtool_depend>catkin</buildtool_depend>
  <run_depend>emacs</run_depend>
</package>
