<package>
  <name>roslisp_repl</name>
  <version>0.3.3</version>
  <description>
    This package provides a script that launches Emacs with Slime (the
    Superior Lisp Interaction Mode) ready for Lisp development and
    roslisp.
  </description>
  <maintainer email="kazhoyan@cs.uni-bremen.de">Gayane Kazhoyan</maintainer>
  <author>Lorenz Moesenlechner</author>
  <license>Public domain</license>

  <buildtool_depend>catkin</buildtool_depend>
  <run_depend>slime_wrapper</run_depend>
  <run_depend>slime_ros</run_depend>
  <run_depend>sbcl</run_depend>
  <run_depend>roslisp</run_depend>
  <run_depend>rosemacs</run_depend>
</package>
