<?xml version="1.0"?>
<package>
  <name>slime_ros</name>
  <version>0.4.9</version>
  <description>Extensions for slime to assist in working with ROS packages</description>

  <maintainer email="kazhoyan@cs.uni-bremen.de">Gayane Kazhoyan</maintainer>
  <author>Bhaskara Marthi</author>
  <license>Public Domain</license>
  <url type="repository">https://github.com/code-iai/ros_emacs_utils</url>

  <buildtool_depend>catkin</buildtool_depend>
  <run_depend>rosemacs</run_depend>
  <run_depend>slime_wrapper</run_depend>
  <run_depend>sbcl</run_depend>
  <run_depend>roslisp</run_depend>
</package>
